API-7747 - Swapped scalaj-http for sttp