@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
-export SBT_OPTS="-XX:MaxMetaspaceSize=1G --add-opens=java.base/java.net=ALL-UNNAMED"
+export SBT_OPTS="-XX:MaxMetaspaceSize=1G"
 sbt pre-commit
 
